Updated index.html with new content including styling, YouTube embed, badges, and article links.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Flatus Atlas</title>
+    <style>
+        body {
+            background-color: RoyalBlue;
+            color: Aqua;
+        }
+        .badge {
+            display: inline-block;
+            margin: 5px;
+            padding: 10px;
+            background-color: lightgray;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to the Human Flatus Atlas</h1>
-    <p>Read more about our findings:</p>
+    <h1>Human Flatus Atlas</h1>
+    <div class="badge">Latest Research</div>
+    <div class="badge">Smart Technology</div>
+    
+    <h2>Stephen Colbert's Insight</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+
+    <h2>Live Articles</h2>
     <ul>
-        <li><a href="https://www.thebrighterside.news/post/smart-underwear-sheds-new-light-on-just-how-often-humans-pass-gas/">AOL News</a></li>
-        <li><a href="https://www.zmescience.com/medicine/scientists-made-smart-underwear-that-tracks-your-farts-in-real-time/">Gizmodo</a></li>
+        <li><a href="https://www.thebrighterside.news/post/smart-underwear-sheds-new-light-on-just-how-often-humans-pass-gas/">Smart Underwear: How Often We Pass Gas</a></li>
+        <li><a href="https://www.zmescience.com/medicine/scientists-made-smart-underwear-that-tracks-your-farts-in-real-time/">Scientists Created Smart Underwear That Tracks Gas</a></li>
     </ul>
 </body>
 </html>
