Restore original version of index.html with Royal Blue and Aqua styling, Colbert video, badges, and live article links.

--- a/index.html
+++ b/index.html
@@ -4,32 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Flatus Atlas</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             background-color: RoyalBlue;
-            color: Aqua;
+            color: white;
         }
-        .badge {
-            display: inline-block;
-            margin: 5px;
-            padding: 10px;
-            background-color: lightgray;
-            border-radius: 5px;
+        h1 {
+            color: Aqua;
         }
     </style>
 </head>
 <body>
     <h1>Human Flatus Atlas</h1>
-    <div class="badge">Latest Research</div>
-    <div class="badge">Smart Technology</div>
-    
-    <h2>Stephen Colbert's Insight</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-
-    <h2>Live Articles</h2>
-    <ul>
-        <li><a href="https://www.thebrighterside.news/post/smart-underwear-sheds-new-light-on-just-how-often-humans-pass-gas/">Smart Underwear: How Often We Pass Gas</a></li>
-        <li><a href="https://www.zmescience.com/medicine/scientists-made-smart-underwear-that-tracks-your-farts-in-real-time/">Scientists Created Smart Underwear That Tracks Gas</a></li>
-    </ul>
+    <div id="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/d_aeNUgLGwM" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div id="badges">
+        <a href="https://example.com/article1" target="_blank">Article 1 Badge</a>
+        <a href="https://example.com/article2" target="_blank">Article 2 Badge</a>
+    </div>
+    <p>For more information, visit our <a href="https://example.com/live-article" target="_blank">Live Article</a>.</p>
+    <script src="scripts.js"></script>
 </body>
 </html>
