--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Flatus Atlas</title>
-    <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            background-color: RoyalBlue;
+            background-color: rgb(65, 105, 225); /* Royal Blue */
             color: white;
-        }
-        h1 {
-            color: Aqua;
         }
     </style>
 </head>
 <body>
-    <h1>Human Flatus Atlas</h1>
-    <div id="video">
+    <h1>Welcome to the Human Flatus Atlas</h1>
+    <p>This platform showcases various aspects of human flatulence.</p>
+    <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/d_aeNUgLGwM" frameborder="0" allowfullscreen></iframe>
     </div>
-    <div id="badges">
-        <a href="https://example.com/article1" target="_blank">Article 1 Badge</a>
-        <a href="https://example.com/article2" target="_blank">Article 2 Badge</a>
+    <div>
+        <h2>Badges</h2>
+        <img src="https://yourbadgelink.com/badge1" alt="Badge 1">
+        <img src="https://yourbadgelink.com/badge2" alt="Badge 2">
     </div>
-    <p>For more information, visit our <a href="https://example.com/live-article" target="_blank">Live Article</a>.</p>
-    <script src="scripts.js"></script>
+    <h2>Live Articles</h2>
+    <ul>
+        <li><a href="https://www.thebrighterside.news/post/smart-underwear-sheds-new-light-on-just-how-often-humans-pass-gas/">Smart Underwear Sheds New Light</a></li>
+        <li><a href="https://www.zmescience.com/medicine/scientists-made-smart-underwear-that-tracks-your-farts-in-real-time/">Scientists Made Smart Underwear</a></li>
+    </ul>
 </body>
 </html>
