Remove badges section from index.html

--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to the Human Flatus Atlas</h1>
-    <p>This platform showcases various aspects of human flatulence.</p>
+    <h1>Welcome to the Human Flatus Atlas Publicity </h1>
+    <p>This page is tracking stories about the Human Flatus Atlas project.</p>
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/d_aeNUgLGwM" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <div>
-        <h2>Badges</h2>
-        <img src="https://yourbadgelink.com/badge1" alt="Badge 1">
-        <img src="https://yourbadgelink.com/badge2" alt="Badge 2">
     </div>
     <h2>Live Articles</h2>
     <ul>
