Add WSJ breaking article and update media coverage with timestamp badges and featured articles

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <span class="badge">Viral Feature</span>
             <h2>📺 The Late Show with Stephen Colbert</h2>
             <p>The "Smart Underwear" project reached a global audience on February 19, 2026, during the 'Sound of Science' segment.</p>
+            <span class="badge">Smart Underwear joke at 3:04</span>
             <div class="video-container">
                 <iframe src="https://www.youtube.com/embed/d_aeNUgLGwM" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -49,12 +50,21 @@
 
         <section class="story">
             <h2>📰 Featured Articles</h2>
+            <div style="background-color: #f0f8ff; padding: 20px; border-radius: 8px; margin-bottom: 20px; border-left: 5px solid #1a5490;">
+                <h3 style="color: #1a5490; margin-top: 0;">📈 Breaking: Wall Street Journal</h3>
+                <p style="color: #666; font-size: 0.9rem; margin-bottom: 10px;">February 20, 2026</p>
+                <strong><a href="https://www.wsj.com/tech/personal-tech/smart-underwear-gut-health-human-flatus-atlas-9ffa1bd7?mod=author_content_page_1_pos_1" target="_blank">Smart Underwear Advances Gut Health Research with Human Flatus Atlas</a></strong>
+            </div>
+            <div style="background-color: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 20px; border-left: 5px solid #4169E1;">
+                <h3 style="color: #4169E1; margin-top: 0;">🏛️ Featured: Smithsonian Magazine</h3>
+                <strong><a href="https://www.smithsonianmag.com/smart-news/how-many-times-a-day-do-you-fart-this-smart-underwear-can-keep-track-and-figuring-out-a-baseline-is-important-for-science-180988198/" target="_blank">Researchers have launched a study to find a typical range for flatulence, which has been harder to measure than you might expect</a></strong>
+            </div>
             <ul style="list-style: none; padding: 0;">
                 <li style="margin-bottom: 15px;">
-                    <strong>AOL News:</strong> <a href="#">A "Fart Atlas"? Why the World is Signing Up for Smart Underwear</a>
+                    <strong>The Brighter Side:</strong> <a href="https://www.thebrighterside.news/post/smart-underwear-sheds-new-light-on-just-how-often-humans-pass-gas/" target="_blank">Smart Underwear Sheds New Light on Just How Often Humans Pass Gas</a>
                 </li>
                 <li style="margin-bottom: 15px;">
-                    <strong>Gizmodo:</strong> <a href="#">The Science of Gut Health Gets a Wearable Upgrade</a>
+                    <strong>ZME Science:</strong> <a href="https://www.zmescience.com/medicine/scientists-made-smart-underwear-that-tracks-your-farts-in-real-time/" target="_blank">Scientists Made Smart Underwear That Tracks Your Farts in Real Time</a>
                 </li>
             </ul>
         </section>
