Publish comprehensive media coverage website with Fox 32, CBC Radio, and all major coverage

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <p style="color: #666; font-size: 0.9rem; margin-bottom: 10px;">February 20, 2026</p>
                 <span class="badge">Breaking Coverage</span>
                 <div class="video-container">
-                    <iframe src="https://www.fox32chicago.com/video/fmc-xtat3xcykjqq3ptp" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/watch?v=S6mANKtfOio" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
             
