--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div style="background-color: #f0f8ff; padding: 20px; border-radius: 8px; margin-bottom: 20px; border-left: 5px solid #1a5490;">
                 <h3 style="color: #1a5490; margin-top: 0;">📈 Breaking: Wall Street Journal</h3>
                 <p style="color: #666; font-size: 0.9rem; margin-bottom: 10px;">February 20, 2026</p>
-                <div style="border: 2px solid #1a5490; padding: 15px; border-radius: 6px; background-color: white; margin-bottom: 10px;">
+                <div style="border: 2px solid #1a5490; padding: 15px; border-radius: 6px; background-color: white;">
                     <strong><a href="https://www.wsj.com/tech/personal-tech/smart-underwear-gut-health-human-flatus-atlas-9ffa1bd7?mod=author_content_page_1_pos_1" target="_blank">It's Called 'Fitbit for Farts'—and It's No Joke</a></strong>
                 </div>
             </div>
