Add two-column layout for Wall Street Journal with headline and snippet

--- a/index.html
+++ b/index.html
@@ -59,8 +59,17 @@
             <div style="background-color: #f0f8ff; padding: 20px; border-radius: 8px; margin-bottom: 20px; border-left: 5px solid #1a5490;">
                 <h3 style="color: #1a5490; margin-top: 0;">📈 Breaking: Wall Street Journal</h3>
                 <p style="color: #666; font-size: 0.9rem; margin-bottom: 10px;">February 20, 2026</p>
-                <div style="border: 2px solid #1a5490; padding: 15px; border-radius: 6px; background-color: white;">
-                    <strong><a href="https://www.wsj.com/tech/personal-tech/smart-underwear-gut-health-human-flatus-atlas-9ffa1bd7?mod=author_content_page_1_pos_1" target="_blank">It's Called 'Fitbit for Farts'—and It's No Joke</a></strong>
+                <div style="display: flex; gap: 20px; align-items: stretch;">
+                    <!-- Left Column: Linkable Story -->
+                    <div style="flex: 1; border: 2px solid #1a5490; padding: 15px; border-radius: 6px; background-color: white; display: flex; flex-direction: column; justify-content: center;">
+                        <strong><a href="https://www.wsj.com/tech/personal-tech/smart-underwear-gut-health-human-flatus-atlas-9ffa1bd7?mod=author_content_page_1_pos_1" target="_blank" style="font-size: 1.1rem; color: #1a5490;">It's Called 'Fitbit for Farts'—and It's No Joke</a></strong>
+                    </div>
+                    <!-- Right Column: Snippet -->
+                    <div style="flex: 1; border: 1px solid #ddd; padding: 15px; border-radius: 6px; background-color: white; font-size: 0.9rem; line-height: 1.5;">
+                        <p style="margin: 0 0 10px 0; font-style: italic; color: #666; font-weight: bold;">From Wall Street Journal:</p>
+                        <p style="margin: 0 0 10px 0; font-weight: bold; color: #1a5490;">Scientists developing a new underwear-able hope to do for gastroenterology what the Apple Watch did for cardiology</p>
+                        <p style="margin: 0; color: #333;">The groundbreaking smart underwear technology aims to revolutionize how we monitor and understand gut health through continuous flatulence measurement.</p>
+                    </div>
                 </div>
             </div>
             <div style="background-color: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 20px; border-left: 5px solid #4169E1;">
