Add Other Unique Journalism sub-page and complete comprehensive media coverage archive

--- a/cnn-wire.html
+++ b/cnn-wire.html
@@ -53,14 +53,9 @@
                 <h3 style="color: #cc0000; margin-top: 0;">📡 Wire Distribution</h3>
                 <p>This story was distributed via CNN's wire service to local television stations across the United States, reaching millions of viewers through local news broadcasts.</p>
                 
-                <h4>Story Details:</h4>
-                <ul>
-                    <li><strong>Headline:</strong> "Scientists make 'smart underwear' to track your gas"</li>
-                    <li><strong>Date:</strong> February 18, 2026</li>
-                    <li><strong>Network:</strong> CNN Newsource</li>
-                    <li><strong>Reach:</strong> Distributed to local TV stations nationwide</li>
-                    <li><strong>Key Finding:</strong> Healthy adults fart average of 32 times per day (double previous estimates)</li>
-                </ul>
+                <h4>Story Publication & Distribution:</h4>
+                <p><strong>Published by:</strong> CNN Newsource (National Wire Service) - February 18, 2026</p>
+                <p><strong>Original Source:</strong> University of Maryland Press Release</p>
                 
                 <h4>Wire Distribution Outlets:</h4>
                 <p>The CNN Newsource story was distributed to and picked up by these local TV stations across multiple states:</p>
