Update index.html to match live version

--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                     <a href="baltimore-banner.html" style="display: inline-block; padding: 12px 20px; background-color: #ff6600; color: white; text-decoration: none; border-radius: 6px; font-weight: bold; margin-bottom: 10px; transition: all 0.3s;">
                         📰 Baltimore Banner
                     </a>
-                    <a href="other-unique-journalism.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin-bottom: 10px; transition: all 0.3s;">
-                        📰 Other Unique Journalism
+                    <a href="additional-media-coverage.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin-bottom: 10px; transition: all 0.3s;">
+                        📰 Additional Media Coverage
                     </a>
                 </div>
             </div>
