Fix Smithsonian article link to point to correct smart underwear story

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <p style="color: #666; font-size: 0.8rem; margin-bottom: 10px;">February 15, 2026</p>
                     
                     <div style="background-color: #e8f0fe; padding: 10px; border-radius: 4px; margin-bottom: 10px; border-left: 3px solid #1a5490;">
-                        <strong><a href="https://www.smithsonianmag.com/smart-science/smart-underwear-could-help-scientists-understand-human-flatulence-180979543/" target="_blank" style="font-size: 0.9rem; color: #1a5490;">Smart Underwear Could Help Scientists Understand Human Flatulence</a></strong>
+                        <strong><a href="https://www.smithsonianmag.com/smart-news/how-many-times-a-day-do-you-fart-this-smart-underwear-can-keep-track-and-figuring-out-a-baseline-is-important-for-science-180988198/" target="_blank" style="font-size: 0.9rem; color: #1a5490;">How Often Do You Fart? This 'Smart Underwear' Can Keep Track</a></strong>
                     </div>
                     
                     <div style="font-style: italic; color: #333; font-size: 0.8rem; line-height: 1.4;">
