Create separate category pages for additional media coverage

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <p style="color: #666; font-size: 0.9rem; margin-bottom: 15px;">Explore more media coverage from additional outlets and platforms:</p>
                 <div style="text-align: center;">
                     <a href="additional-media-coverage.html" style="display: inline-block; padding: 15px 30px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; transition: all 0.3s;">
-                        📰 View Additional Media Coverage
+                        📰 Explore Additional Coverage
                     </a>
                 </div>
             </div>
