--- a/additional-media-coverage.html
+++ b/additional-media-coverage.html
@@ -26,7 +26,7 @@
         .badge { background-color: #00FFFF; color: #1a2a3a; padding: 5px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: bold; text-transform: uppercase; margin-bottom: 10px; display: inline-block; }
         
         .nav { text-align: center; margin-bottom: 2rem; }
-        .nav a { margin: 0 10px; padding: 8px 16px; background-color: #4169E1; color: white; text-decoration: none; border-radius: 4px; }
+        .nav a { margin: 5px; padding: 10px 16px; background-color: #4169E1; color: white; text-decoration: none; border-radius: 4px; display: inline-block; }
         .nav a:hover { background-color: #008b8b; }
         
         .story-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin-top: 20px; }
