Consolidate site structure to 5 pages and add new media coverage stories
- Simplified navigation from multiple category pages to 5 main pages
- Updated additional-media-coverage.html with consolidated stories from all categories
- Added Valley Vanguard story to Technology Innovation
- Added 10News story to Technology Innovation
- Added Food Institute story to Nutrition Science
- Added KVUE story to CNN Service
- Added KLTV story to CNN Service
- Updated main index.html navigation to link only to 5 pages
- Removed category navigation buttons from all pages
- All stories now organized in single comprehensive archive page

--- a/nutrition-science.html
+++ b/nutrition-science.html
@@ -43,18 +43,18 @@
     </header>
     
     <div class="container">
-        <nav class="nav">
-            <a href="index.html">← Back to Main</a>
-            <a href="additional-media-coverage.html" style="background-color: #00FFFF; color: #1a2a3a;">Additional Media Coverage</a>
-            <a href="research-focus.html" style="background-color: #00FFFF; color: #1a2a3a;">Research Focus</a>
-            <a href="nature-microbiome.html" style="background-color: #00FFFF; color: #1a2a3a;">Nature Microbiome</a>
-            <a href="medical-news.html" style="background-color: #00FFFF; color: #1a2a3a;">Medical News</a>
-            <a href="nutrition-science.html" style="background-color: #00FFFF; color: #1a2a3a;">Nutrition Science</a>
-            <a href="public-health.html" style="background-color: #00FFFF; color: #1a2a3a;">Public Health</a>
-            <a href="global-coverage.html" style="background-color: #00FFFF; color: #1a2a3a;">Global Coverage</a>
-            <a href="academic-recognition.html" style="background-color: #00FFFF; color: #1a2a3a;">Academic Recognition</a>
-            <a href="technology-innovation.html" style="background-color: #00FFFF; color: #1a2a3a;">Technology Innovation</a>
-            <a href="health-impact.html" style="background-color: #00FFFF; color: #1a2a3a;">Health Impact</a>
+        <nav class="nav" style="text-align: center;">
+            <a href="index.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">← Back to Main</a>
+            <a href="additional-media-coverage.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Additional Media Coverage</a>
+            <a href="research-focus.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Research Focus</a>
+            <a href="nature-microbiome.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Nature Microbiome</a>
+            <a href="medical-news.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Medical News</a>
+            <a href="nutrition-science.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Nutrition Science</a>
+            <a href="public-health.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Public Health</a>
+            <a href="global-coverage.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Global Coverage</a>
+            <a href="academic-recognition.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Academic Recognition</a>
+            <a href="technology-innovation.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Technology Innovation</a>
+            <a href="health-impact.html" style="display: inline-block; padding: 12px 20px; background-color: #00FFFF; color: #1a2a3a; text-decoration: none; border-radius: 6px; font-weight: bold; margin: 5px; transition: all 0.3s;">Health Impact</a>
         </nav>
         
         <section class="story">
@@ -66,6 +66,12 @@
                     <p style="color: #666; font-size: 0.9rem; margin-bottom: 10px;">February 2026</p>
                     <p><strong><a href="https://www.nutritioninsight.com/news/health-nutrition-trends-2026-us-news-glp1.html" target="_blank">2026 Health Trends: GLP-1 Drugs & Wearable Tech</a></strong></p>
                     <p style="margin-top: 10px; font-size: 0.9rem;">Nutrition research highlighting how wearable technology is being integrated with metabolic health monitoring and personalized nutrition approaches.</p>
+                </div>
+                <div class="story-card">
+                    <h3 style="color: #4169E1; margin-top: 0;">🍎 Food Institute</h3>
+                    <p style="color: #666; font-size: 0.9rem; margin-bottom: 10px;">February 2026</p>
+                    <p><strong><a href="https://foodinstitute.com/focus/wearable-wellness-tech-is-taking-off-from-ai-apps-to-smart-underwear/" target="_blank">Wearable Wellness Tech Is Taking Off From AI Apps to Smart Underwear</a></strong></p>
+                    <p style="margin-top: 10px; font-size: 0.9rem;">Food industry coverage of the booming wearable wellness technology market, highlighting smart underwear as part of the broader trend in health monitoring devices.</p>
                 </div>
             </div>
         </section>
