--- a/technology-innovation.html
+++ b/technology-innovation.html
@@ -64,6 +64,24 @@
                     <p><strong><a href="https://www.cnet.com/health/medical/ces-2026-health-tech-trends/" target="_blank">Best Fitness & Wellness Tech Products</a></strong></p>
                     <p style="margin-top: 10px; font-size: 0.9rem;">Technology review highlighting breakthrough health monitoring devices and trends in personalized medicine and preventative care.</p>
                 </div>
+                <div class="story-card">
+                    <h3 style="color: #4169E1; margin-top: 0;">🌐 The Independent</h3>
+                    <p style="color: #666; font-size: 0.9rem; margin-bottom: 10px;">February 2026</p>
+                    <p><strong><a href="https://www.the-independent.com/news/science/smart-underwear-tracks-fart-metabolism-b2919610.html" target="_blank">Smart Underwear Tracks Fart Metabolism in Real Time</a></strong></p>
+                    <p style="margin-top: 10px; font-size: 0.9rem;">Scientists have developed smart underwear that can track flatulence in real time, providing unprecedented data on intestinal gas production and gut microbiome activity during ordinary digestion.</p>
+                </div>
+                <div class="story-card">
+                    <h3 style="color: #4169E1; margin-top: 0;">📰 Valley Vanguard</h3>
+                    <p style="color: #666; font-size: 0.9rem; margin-bottom: 10px;">February 2026</p>
+                    <p><strong><a href="https://www.valleyvanguardonline.com/smart-underwear-study-shows-people-fart-more-than-they-admit/" target="_blank">Smart Underwear Study Shows People Fart More Than They Admit</a></strong></p>
+                    <p style="margin-top: 10px; font-size: 0.9rem;">Local coverage of the groundbreaking study revealing that people pass gas more frequently than they report, with smart underwear technology providing objective measurements.</p>
+                </div>
+                <div class="story-card">
+                    <h3 style="color: #4169E1; margin-top: 0;">📺 10News</h3>
+                    <p style="color: #666; font-size: 0.9rem; margin-bottom: 10px;">February 2026</p>
+                    <p><strong><a href="https://www.10news.com/news/fact-or-fiction/fact-or-fiction-scientists-design-smart-underwear-to-track-flatulence" target="_blank">Fact or Fiction: Scientists Design Smart Underwear to Track Flatulence</a></strong></p>
+                    <p style="margin-top: 10px; font-size: 0.9rem;">San Diego TV station examines the science behind smart underwear technology, separating fact from fiction in this innovative approach to digestive health monitoring.</p>
+                </div>
             </div>
         </section>
     </div>
