Add prominent badge to header: '4,700 applications received!'
- Added red/coral badge in header below subtitle
- Highlights overwhelming project interest and success
- Larger, prominent styling to draw attention
- Complements existing media coverage display

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <header>
         <h1>Human Flatus Atlas and Smart Underwear</h1>
         <p style="font-size: 1.4rem; font-weight: 600;">Rollout Publicity</p>
+        <span class="badge" style="background-color: #ff6b6b; color: white; padding: 8px 16px; border-radius: 20px; font-size: 1.1rem; font-weight: bold; margin-top: 10px; display: inline-block;">4,700 applications received!</span>
     </header>
     
     <div class="container">
