Correct Wall Street Journal author attribution
- Fixed author from Joanna Stern to Christopher Mims
- Christopher Mims is WSJ Technology Columnist in San Francisco
- Covers innovation, supply chains, AI, robotics, and consumer tech
- Perfect fit for Smart Underwear technology story
- Ensures accurate attribution for major WSJ feature

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div style="background-color: #f8f9fa; padding: 20px; border-radius: 8px; margin-bottom: 20px; border: 2px solid #1a5490;">
                 <h3 style="color: #1a5490; margin-top: 0; font-size: 1.5rem; font-weight: bold;">📈 Wall Street Journal</h3>
                 <p style="color: #666; font-size: 0.9rem; margin-bottom: 5px;">February 20, 2026</p>
-                <p style="color: #666; font-size: 0.8rem; margin-bottom: 10px;">By Joanna Stern</p>
+                <p style="color: #666; font-size: 0.8rem; margin-bottom: 10px;">By Christopher Mims</p>
                 
                 <div style="background-color: #e8f0fe; padding: 10px; border-radius: 4px; margin-bottom: 15px; border-left: 3px solid #1a5490;">
                     <strong><a href="https://www.wsj.com/tech/personal-tech/smart-underwear-gut-health-human-flatus-atlas-9ffa1bd7?mod=author_content_page_1_pos_1" target="_blank" style="font-size: 1.1rem; color: #1a5490;">It's Called the 'Fitbit for Farts'—and It's No Joke</a></strong>
