Add 5 new CNN Newsource stations - now 32 stations across 23 areas
- Added Fox 5 Vegas (Las Vegas, NV) - first western state coverage!
- Added WAFF Huntsville (Alabama) - 2nd AL station
- Added WLUC TV6 Upper Michigan (Negaunee, MI) - new state
- Added KSWO Lawton (Oklahoma) - new state
- Added KTIV Sioux City (Iowa) - 2nd IA station
- Updated cnn-map.html with all 5 new markers and coordinates
- Updated stats bar from 27 to 32 stations, 20 to 23 areas
- Updated banner on cnn-hits.html to reflect new totals

--- a/cnn-map.html
+++ b/cnn-map.html
@@ -87,11 +87,11 @@
 
         <div class="stats-bar">
             <div class="stat-box">
-                <span class="number">27</span>
+                <span class="number">32</span>
                 <span class="label">TV Stations</span>
             </div>
             <div class="stat-box">
-                <span class="number">20</span>
+                <span class="number">23</span>
                 <span class="label">States + D.C.</span>
             </div>
             <div class="stat-box">
@@ -139,7 +139,12 @@
             { name: "KWCH Wichita", city: "Wichita, KS", lat: 37.6872, lng: -97.3301, url: "https://www.kwch.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" },
             { name: "KCTV5 Kansas City", city: "Kansas City, MO", lat: 39.0997, lng: -94.5786, url: "https://www.kctv5.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
             { name: "KFYR Bismarck", city: "Bismarck, ND", lat: 46.8083, lng: -100.7837, url: "https://www.kfyrtv.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" },
-            { name: "WUSA9 Washington D.C.", city: "Washington, D.C.", lat: 38.9072, lng: -77.0369, url: "https://www.wusa9.com/video/tech/science/umd-debuts-smart-underwear-that-tracks-well-you-know/65-35d4d012-fb45-483d-8ef8-e3a944022c57" }
+            { name: "WUSA9 Washington D.C.", city: "Washington, D.C.", lat: 38.9072, lng: -77.0369, url: "https://www.wusa9.com/video/tech/science/umd-debuts-smart-underwear-that-tracks-well-you-know/65-35d4d012-fb45-483d-8ef8-e3a944022c57" },
+            { name: "Fox 5 Vegas", city: "Las Vegas, NV", lat: 36.1699, lng: -115.1398, url: "https://www.fox5vegas.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "WAFF Huntsville", city: "Huntsville, AL", lat: 34.7304, lng: -86.5861, url: "https://www.waff.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "WLUC TV6 Upper Michigan", city: "Negaunee, MI", lat: 46.4997, lng: -87.6128, url: "https://www.uppermichiganssource.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "KSWO Lawton", city: "Lawton, OK", lat: 34.6036, lng: -98.3959, url: "https://www.kswo.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "KTIV Sioux City", city: "Sioux City, IA", lat: 42.4999, lng: -96.4003, url: "https://www.ktiv.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" }
         ];
 
         // Initialize map centered on continental US
@@ -167,7 +172,7 @@
                 <div style="font-family:Helvetica,sans-serif; min-width:180px;">
                     <strong style="color:#cc0000; font-size:1rem;">📺 ${s.name}</strong><br>
                     <span style="color:#666; font-size:0.85rem;">${s.city}</span><br>
-                    <span style="color:#666; font-size:0.8rem;">February 18, 2026 · CNN Newsource</span><br><br>
+                    <span style="color:#666; font-size:0.8rem;">32 TV stations · 23 states + D.C. · February 18, 2026 · CNN Newsource</span><br><br>
                     <a href="${s.url}" target="_blank" style="color:#cc0000; font-weight:bold; font-size:0.85rem;">▶ Watch Story →</a>
                 </div>
             `);
